Adding working CGAL code + test for remeshing. Modifying offset surface generation code at the moment to be it's own seperate set of files

--- a/thought_proc.tex
+++ b/thought_proc.tex
@@ -54,6 +54,7 @@ This issue arose when refactoring lots of the graphics code
 	\item Mark down a timeline of goals, that you want to accomplish! Seriously!
 	\item What exactly is mesh subdivision ... not fully familiar yet, atm!
 	\item Use the term \textit{Geometric algorithms}, to describe one's knowledge of graphics algos
+	\item always a good idea to take out unsused header files, and using namespaces ( just declare like <namespace>::<class>)
 	\item \textbf{TBD} 
 \end{itemize}
 
