I got remeshing and interpolating surface working for the 2D-plane case. I'm not throwing away my shot.

--- a/PAPERS_AND_NOTES/thought_proc.tex
+++ b/PAPERS_AND_NOTES/thought_proc.tex
@@ -93,7 +93,9 @@ This issue arose when refactoring lots of the graphics code
 	\item Checkout
 	\item Merge
 	\item Stable vs Unstable code
+	\item Header-only libraryes ( versus other libs ) 
 \end{itemize}
+
 
 \end{document}
 
