Making changes to impulse-launch based alignment scheme and non animated pipeline schemes

--- a/NOTES/DEVELOPMENT_NOTES/thought_proc.tex
+++ b/NOTES/DEVELOPMENT_NOTES/thought_proc.tex
@@ -96,6 +96,12 @@ This issue arose when refactoring lots of the graphics code
 \end{itemize}
 
 
+\section{Data collection and experimental set ups }
+I really need to develop a set of good techniques, to [1] Process large data streams and gather meaninful results and [2] Be able to set up set large data streams. \\
+Need a way to easily perturb my current configurations; have to assess if an algorithm makes good sense or not. \\
+Thoughts atm, include [1] Analyzing other people's experimental set ups and [2] Replicating those that have been done in your problem's domain ( 3D mesh rigid alignment ) - especially JASNOM.
+
+
 \end{document}
 
 
